<resources>
    <string name="app_name">Scratch Games</string>
    <string name="app_name_up">SCRATCH GAMES</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="preparing">Preparing...</string>
    <string name="cancel">Cancel</string>
    <string name="game_title">title</string>
    <string name="game_author">author</string>
    <string name="no_network">No networks. Please try again later</string>
    <string name="start">Start</string>p
    <string name="best">Best Picks</string>
    <string name="showroom">Shared Games</string>
    <string name="add_id">Scratch ID (e.g. 142508032)</string>
    <string name="add_name">Game title</string>
    <string name="add_user">Maker</string>
    <string name="add_you_game_message">Add information of your Scratch Game for everyone in the world to enjoy.</string>
    <string name="add_you_game_title">Add new game</string>
    <string name="added_your_game">Successfully added your game</string>
    <string name="emailTitle">[Scratch Games] Help me!</string>
    <string name="emailDesc">Hi! Developer.</string>
    <string name="contact">Contact us</string>
    <string name="about">About</string>
    <string name="guide_showroom">You can share your own Scratch games with everybody in the world. Add right now with + button.</string>
    <string name="more_detail"><u>SEE DETAIL</u></string>
    <string name="how_to_add_new_game">How to add new game</string>
    <string name="developer">Developer</string>
    <string name="delete_game">Delete this game?</string>
    <string name="delete">Delete</string>
    <string name="about_app">About App</string>
    <string name="upgrade">Upgrade</string>
    <string name="Tap_upgrade">Tap the button to upgrade the new version.</string>
    <string name="about_this_app">I have two kids to love to make Scratch games. This application has started for them to enjoy their games in mobile. Like them I hope to enjoy with your and other\'s Scratch games in this application.</string>
    <string name="version">Version: %s</string>
    <string name="current_is_newest">Current version is the newest.</string>
    <string name="community">Community</string>
    <string name="removefrom_mygame">Remove this game from Favorites?</string>
    <string name="remove">remove</string>
    <string name="mygames">Favorites</string>
    <string name="nofavorites" >Tap the heart button in the games. They will be placed here.</string>
    <string name="tooltip1">1. Tap + button below to add your game.</string>
    <string name="tooltip2">2. Long tap to delete the games you added.</string>
    <string name="rate_this_app">Rate the App</string>
    <string name="ad_unit_id">ca-app-pub-9553464645775660/4453162832</string>



</resources>
