<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/about_app" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <ImageView
                android:layout_height="105dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:layout_width="105dp"
                android:layout_marginTop="50dp" />

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:textSize="19sp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvVersion"
                tools:text="Version: v1.5"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:textSize="15sp"
                android:textAlignment="center" />

            <TextView
                android:text="@string/Tap_upgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvVersionGuide"
                android:textAlignment="center" />

            <Button
                android:text="@string/upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnUpgrade"
                tools:text="UPGRADE"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="center"
                android:paddingTop="8dp" />

            <TextView
                android:text="@string/about_this_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="64dp" />

            <Button
                android:text="@string/rate_this_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnRate"
                tools:text="Rate the application"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="center"
                android:paddingTop="8dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>